# wit-bindgen

./: Cargo.toml
crates/core/src/: source.rs
crates/pascal/: Cargo.toml
crates/pascal/src/: lib.rs  source.rs
